@@ -12,6 +12,8 @@ version 0.69
 	  online accounts as colored.
 	* Added SSL support, compatible with GNUTLS and Mozilla NSS.
 	* Added support for gettext 0.12.x.
+	* The right-click menu for conversation tabs now shows the tab icon
+	  and status, if tab icons are enabled. (Jesse Farmer)
 	* Korean translation updated (Kyung-uk Son)
 	* Swedish translation updated (Tore Lundqvist (luntor))
 
